Enhance audit logging and configuration: improve error handling in audit mappers and listeners; switch to JacksonProvider for ObjectMapper; update application properties to support environment variables